@@ -1639,10 +1639,16 @@ Formats.units.alot=A lot !!!
 
 ConfigView.section.ipfilter.persistblocking=Save blocked IP details across restarts
 
-FilesView.rename.choose.path=Choose new or existing file
 FilesView.menu.rename=Rename or Retarget
+FilesView.menu.rename_only=Rename
+FilesView.menu.retarget=Retarget
+
+FilesView.rename.choose.path=Choose new or existing file
+FilesView.rename.choose.path.dir=Choose new or existing directory
 FilesView.rename.confirm.delete.title=Confirm Delete
 FilesView.rename.confirm.delete.text=Confirm deletion of original file '%1'
+FilesView.rename.filename.title=Rename file
+FilesView.rename.filename.text=Choose a new name for the file
 
 ConfigView.section.mode=Mode
 ConfigView.section.mode.title=User Proficiency
@@ -2169,6 +2175,8 @@ MessageBoxWindow.nomoreprompting=Don't prompt me again
 
 TorrentOptionsView.param.max.seeds=Maximum number of seed connections [0: connection limit]
 TorrentOptionsView.param.alternative.value.enable=Alternate value when seeding
+
+ConfigView.section.style.SeparateFilesViewRenameRetarget=Show separate "Rename" and "Retarget" menu options in Files tab
 
 ConfigView.section.proxy.check.on.start=Check proxy status on startup
 
