@@ -13,6 +13,7 @@ FEATURE: UI   | Added file extension column in files view [amc1]
 FEATURE: UI   | Spinners for config field that take numbers [TuxPaper]
 FEATURE: UI   | Setting for Minimum # of Simultaneous Active Downloads to have running at any given time [TuxPaper]
 FEATURE: UI   | Console UI NAT test [Parg]
+FEATURE: UI   | Option to have separate rename and retarget menu items in Files view [amc1]
 FEATURE: Plug | Plugins can now create submenus. [amc1]
 FEATURE: Plug | Added code to allow plugins to get text input from a user in non-UI specific way. [amc1]
 FEATURE: Plug | Plugins now have better support to organise file data within default save directories. [amc1]
